# 21s1-cp-spa-team-40

./: .clang-format  .gitignore  README.md  run-tests.py  xml-extractor.py
Team40/Code40/src/integration_testing/: CMakeLists.txt
Team40/Code40/src/integration_testing/src/: TestFrontEnd.cpp  TestInt_QueryProcessor+PKB.cpp  TestInt_SourceProcessor+PKB.cpp  TestIntegrationUtils.h
Team40/Code40/src/spa/: CMakeLists.txt
Team40/Code40/src/spa/include/spa/: SPA.h
Team40/Code40/src/spa/src/: Abstractions.h  AssignStatement.cpp  DesignExtractor.cpp  EntityTable.h  Expression.h  Factor.cpp  Factor.h  FollowsStarTable.h  FollowsTable.h  ModifiesTable.h  PKB.cpp  PKB.h  ParentStarTable.h  ParentTable.h  Parser.cpp  PrintStatement.cpp  ReadStatement.cpp  SPA.cpp  SPA.h  Statement.cpp  Statement.h  StatementTable.h  TNode.h  UsesTable.h  spa.cpp
Team40/Code40/src/spa/src/PQL/: Entity.cpp  Entity.h  FollowsRelationship.cpp  Query.cpp  Query.h  Relationship.cpp  Relationship.h  Statement.cpp
Team40/Code40/src/spa/src/QueryProcessor/: Entity.cpp  Query.cpp  QueryParser.cpp  QueryParser.h  QueryPreprocessor.cpp  Relationship.cpp  Relationship.h
Team40/Code40/src/spa/src/QueryProcessor/model/: Entity.cpp  Entity.h  FollowsRelationship.cpp  Query.cpp  Query.h  Relationship.cpp  Relationship.h  Statement.cpp
Team40/Code40/src/spa/src/SourceProcessor/: DesignExtractor.cpp  Line.cpp  Parser.cpp  Parser.h
Team40/Code40/src/spa/src/common/: CMakeLists.txt
Team40/Code40/src/spa/src/common/model/: ConstantValue.cpp  ConstantValue.h  Factor.cpp  Factor.h  Procedure.cpp  Procedure.h  Program.cpp  Variable.cpp
Team40/Code40/src/spa/src/lib/Model/: AssignStatement.cpp  CallStatement.cpp  ConditionalExpression.h  ConstantValue.cpp  ConstantValue.h  Expression.cpp  Expression.h  Factor.cpp  Factor.h  IfStatement.cpp  PrintStatement.cpp  Procedure.cpp  Procedure.h  ReadStatement.cpp  SingleTermExpression.cpp  SingleTermExpression.h  Statement.cpp  Statement.h  SubtractTermsExpression.cpp  SubtractTermsExpression.h  SumTermsExpression.cpp  SumTermsExpression.h  Term.cpp  Term.h  Variable.cpp  Variable.h  WhileStatement.cpp
Team40/Code40/src/spa/src/pkb/: CMakeLists.txt  EntityTable.h  FollowsStarTable.cpp  FollowsStarTable.h  FollowsTable.cpp  FollowsTable.h  ModifiesTable.cpp  ModifiesTable.h  PKB.cpp  PKB.h  ParentStarTable.cpp  ParentStarTable.h  ParentTable.cpp  ParentTable.h  UsesTable.cpp  UsesTable.h
Team40/Code40/src/spa/src/pkb/include/: FollowsTable.h  Iterator.h  UsesTable.h
Team40/Code40/src/spa/src/pkb/src/: BranchBackTable.cpp  BranchInTable.cpp  CallsStarTable.cpp  CallsTable.cpp  ConditionTable.cpp  ConstTable.cpp  EntityTable.cpp  FollowsStarTable.cpp  FollowsTable.cpp  ModifiesTable.cpp  NextBipTable.cpp  NextTable.cpp  PKB.cpp  ParentStarTable.cpp  ParentTable.cpp  PatternTable.cpp  PostfixAdapter.cpp  ProcedureTable.cpp  StatementTable.cpp  TNode.cpp  UsesTable.cpp  VarTable.cpp
Team40/Code40/src/spa/src/query_processor/: CMakeLists.txt  QueryEvaluator.cpp  QueryEvaluator.h  QueryProcessor.cpp  QueryProcessor.h  Util.cpp
Team40/Code40/src/spa/src/query_processor/include/: Abstractions.h  QueryEvaluator.h  QueryParser.h  QueryPreprocessor.h  QueryProcessor.h  QueryTokenizer.h  Result.h  Util.h  shit.h
Team40/Code40/src/spa/src/query_processor/model/: CMakeLists.txt  Query.cpp  Query.h
Team40/Code40/src/spa/src/query_processor/query_preprocessor/: CMakeLists.txt  QueryParser.cpp  QueryParser.h  QueryPreprocessor.cpp  QueryPreprocessor.h  QueryTokenizer.cpp  QueryTokenizer.h
Team40/Code40/src/spa/src/query_processor/relationship_handler/: CMakeLists.txt  FollowsHandler.cpp  FollowsHandler.h  RelationshipHandler.h
Team40/Code40/src/spa/src/query_processor/src/: QueryEvaluator.cpp  QueryOptimizer.cpp  QueryParser.cpp  QueryPreprocessor.cpp  QueryProcessor.cpp  QueryTokenizer.cpp  Result.cpp  ResultCache.cpp  ResultFormatter.cpp  ResultTable.cpp  ValueToPointersMap.cpp  _QueryTokenizer.cpp
Team40/Code40/src/spa/src/source_processor/: CMakeLists.txt  DesignExtractor.cpp  Line.cpp  Parser.cpp  Parser.h
Team40/Code40/src/spa/src/source_processor/include/: Parser.h
Team40/Code40/src/spa/src/source_processor/src/: AssignStatementParser.cpp  CallStatementParser.cpp  DesignExtractor.cpp  ExpressionParser.cpp  ExtractionContext.cpp  FollowsExtractor.cpp  IfStatementParser.cpp  Lexer.cpp  Line.cpp  ParentsExtractor.cpp  Parser.cpp  PrintStatementParser.cpp  ProcedureParser.cpp  ProgramParser.cpp  ReadStatementParser.cpp  SourceProcessor.cpp  StatementParser.cpp  WhileStatementParser.cpp
Team40/Code40/src/unit_testing/: CMakeLists.txt
Team40/Code40/src/unit_testing/include/: TestUtils.h
Team40/Code40/src/unit_testing/src/: TestAST.cpp  TestDeclaration.cpp  TestEntity.cpp  TestEntityTable.cpp  TestPKB.cpp  TestParser.cpp  TestPatternClause.cpp  TestQueryParser.cpp  TestQueryTokenizer.cpp  TestReference.cpp  TestRelation.cpp  TestSelectClause.cpp  TestStatementTable.cpp  TestSuchThatClause.cpp
Team40/Code40/src/unit_testing/src/common/: CMakeLists.txt
Team40/Code40/src/unit_testing/src/common/models/: TestCommonUtils.h  TestConstantValue.cpp  TestFactor.cpp  TestStatement.cpp  TestVariable.cpp
Team40/Code40/src/unit_testing/src/pkb/: CMakeLists.txt  TestAST.cpp  TestEntityTable.cpp  TestIterator.cpp  TestPKB.cpp  TestStatementTable.cpp
Team40/Code40/src/unit_testing/src/pkb/src/: TestAST.cpp  TestCallsStarTable.cpp  TestCallsTable.cpp  TestEntityTable.cpp  TestIterator.cpp  TestNextBipTable.cpp  TestNextTable.cpp  TestPKB.cpp  TestPKBUtils.h  TestPatternTable.cpp  TestPostfixAdapter.cpp  TestRelationshipTable.cpp  (+1 more)
Team40/Code40/src/unit_testing/src/query_processor/: CMakeLists.txt  TestQueryEvaluator.cpp  TestQueryOptimizer.cpp  TestQueryParser.cpp  TestQueryPreprocessor.cpp  TestQueryProcessor.cpp  TestQueryTokenizer.cpp  TestResult.cpp  TestResultTable.cpp  TestSelectClause.cpp
Team40/Code40/src/unit_testing/src/source_processor/: CMakeLists.txt  TestDesignExtractor.cpp  TestEntityContext.cpp  TestExtractionContext.cpp  TestParser.cpp
(+645 files in other folders)
